# endive

./: .dockerignore  .gitignore  ANALYSIS_GUIDE.md  ANALYSIS_PLAN.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.dev  EXP3_REPORT.md  EXP4_REPORT.md  EXPERIMENT_PLAN.md  PLOT_REFACTOR.md  PRUNING_PLAN.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUNNING_EXPERIMENTS.md  SIMULATOR_REVIEW.md  SPEC.md  UNCONDITIONAL.md  UPDATED_SIMULATOR.md  analysis.toml  cfg.toml  cond_rtt.py  docker-compose.dev.yml  docker-compose.yml  example_saturation_config.toml  experiment_summary.md  monitor_experiments.sh  plot_rtt.py  plotting.toml  pyproject.toml  requirements.txt  rtt.py  simulation_summary.md  test.py
.beads/: issues.jsonl  metadata.json
.claude/: session_memory.md  settings.local.json
analysis/: des_profiling_report.md  distributions.json  dr_iceberg_metadata.md  dr_put_get.md  dr_s3x.md  latency_verification.md  simulation_summary.md
docs/: ANALYSIS_GUIDE.md  ANALYSIS_PLAN.md  APPENDIX_SIMULATOR_DETAILS.md  APPEND_SIMULATION_DESIGN.md  ARCHITECTURE.md  BASELINE_RESULTS.md  CODE_NAVIGATION.md  CONSOLIDATED_FORMAT.md  DEVELOPER_NOTES.md  DOCKER.md  EXPERIMENT_PLOTTING_ISSUES.md  INDEX.md  IO_CONVOY_ANALYSIS.md  ORGANIZATION_SUMMARY.md  OVERHEAD_ANALYSIS.md  PLAN_ACCURATE_DISTRIBUTIONS.md  PLAN_REALISTIC_LATENCIES.md  PROVIDER_SEPARATION.md  QUICKSTART.md  README.md  REENTRANT_EXECUTION_FIX.md  REFACTORING_PLAN.md  RUNNING_EXPERIMENTS.md  SIMULATOR.md  SNAPSHOT_VERSIONING.md  TEST_COVERAGE.md  TEST_FIXES.md  WARMUP_PERIOD.md  append_errata.md  (+5 more)
(+194 files in other folders)
