[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endive"
version = "0.1.0"
description = "Endive - Iceberg Catalog Simulator for Saturation Experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pyarrow",
    "scipy",
    "pytest",
]

[project.scripts]
endive = "endive.main:cli"
endive-experiment = "endive.experiment:cli"
endive-analysis = "endive.analysis:cli"

[tool.setuptools]
packages = ["endive"]
